--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,10 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Image
-      run: docker build -t yourusername/demo-app .
+      run: docker build -t doc013/demo-devops-app .
 
     - name: Push Image
-      run: docker push yourusername/demo-app
+      run: docker push doc013/demo-devops-app
 
     - name: Deploy to EC2
       uses: appleboy/ssh-action@v0.1.6
